@@ -144,6 +144,27 @@ class CacheTest(unittest.TestCase):
         ]
         assert m.kwargs == {'data_dir':'./test_htdocs', 'type':'dbm'}
 
+    def test_args_complete(self):
+        t = Template("""
+        <%def name="foo()" cached="True" cache_timeout="30" cache_dir="./test_htdocs" cache_type="file" cache_key='somekey'>
+            this is foo
+        </%def>
+
+        ${foo()}
+""")
+        m = self._install_mock_cache(t)
+        t.render()
+        assert m.kwargs == {'data_dir':'./test_htdocs', 'type':'file', 'timeout':30}
+        
+        
+        t2 = Template("""
+        <%page cached="True" cache_timeout="30" cache_dir="./test_htdocs" cache_type="file" cache_key='somekey'/>
+        hi
+        """)
+        m = self._install_mock_cache(t2)
+        t2.render()
+        assert m.kwargs == {'data_dir':'./test_htdocs', 'type':'file', 'timeout':30}
+
     def test_fileargs_lookup(self):
         l = lookup.TemplateLookup(cache_dir='./test_htdocs', cache_type='file')
         l.put_string("test","""
